# FL-RPC

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc
src/const/: config.hh
src/discord/: discord_rpc.cc  discord_rpc.hh
src/gui/: settings.cc  settings.hh
src/utils/: process_monitor.cc  process_monitor.hh  system_tray.cc  system_tray.hh
